@@ -27,6 +27,9 @@ PHP                                                                        NEWS
   . Fixed bug #80329 (Add option to specify LOAD DATA LOCAL white list folder
     (including libmysql)). (Darek Ślusarczyk)
 
+- MySQLnd:
+  . Fixed bug #80761 (PDO uses too much memory). (Nikita)
+
 - Opcache:
   . Added inheritance cache. (Dmitry)
 
